<resources>
    <string name="app_name">UARK Register App</string>
    <string name="title_activity_products_listing">Products</string>
    <string name="title_activity_product_view">Product View</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_all_products">Show All Products</string>
    <string name="button_create_product">Create Product</string>
    <string name="button_start_transaction">Start Transaction</string>
    <string name="button_employee_login">Login</string>
    <string name="button_create_emplyee">Create Employee</string>
    <string name="button_sales_report_cashier">Sales Report: Cashier</string>
    <string name="button_sales_report_product">Sales Report: Product</string>
    <string name="button_log_out">Log Out</string>
    <string name="text_view_landing_welcome">UARK Register App</string>
    <string name="text_view_products_lookup_code">LookupCode</string>
    <string name="text_view_products_count">0</string>
    <string name="text_view_products_created_on">01/01/1970</string>
    <string name="text_view_label_products_lookup_code">Lookup Code:</string>
    <string name="text_view_label_products_count">Count:</string>
    <string name="text_view_label_products_created_on">Created On:</string>
    <string name="text_view_main_menu">! What would you like to do next?</string>
    <string name="text_view_transaction_createdOn">Placeholder</string>
    <string name="alert_dialog_products_loading">Loading Products</string>
    <string name="alert_dialog_retrieving_employee_count">Retrieving employee count.</string>
    <string name="alert_dialog_product_save">Saving Product...</string>
    <string name="alert_dialog_product_delete">Deleting Product...</string>
    <string name="alert_dialog_employee_save">Saving Employee...</string>
    <string name="alert_dialog_employee_delete">Deleting Employee...</string>
    <string name="alert_dialog_product_save_success">The product was successfully saved.</string>
    <string name="alert_dialog_product_save_failure">An issue was encountered when attempting to save the product. The changes were not saved.</string>
    <string name="alert_dialog_product_delete_success">The product was successfully deleted.</string>
    <string name="alert_dialog_employee_save_success">The employee was successfully saved.</string>
    <string name="alert_dialog_employee_save_failure">An issue was encountered when attempting to save the employee. The changes were not saved.</string>
    <string name="alert_dialog_employee_delete_success">The employee was successfully deleted.</string>
    <string name="alert_dialog_product_delete_failure">An issue was encountered when attempting to delete the product. You can try again to delete the product.</string>
    <string name="alert_dialog_employee_delete_failure">An issue was encountered when attempting to delete the employee. You can try again to delete the employee.</string>
    <string name="alert_dialog_products_load_failure">Unable to load products listing.</string>
    <string name="alert_dialog_employee_count_retrieval_failure">Unable to retrieve the employee count.</string>
    <string name="alert_dialog_retrieving_employee_credentials">Verifying Credentials</string>
    <string name="alert_dialog_create_employee_validation_password_invalid">Invalid password</string>
    <string name="alert_dialog_employee_login_failure">Login Failed!</string>
    <string name="alert_dialog_employee_login_success">Login Successful!</string>
    <string name="alert_dialog_no_employees_exist">No Employees Exist</string>
    <string name="alert_dialog_no_employees_exist_message">Please create your first employee.</string>
    <string name="alert_dialog_product_delete_confirm">Are you sure you want to delete this product? This action cannot be undone.</string>
    <string name="alert_dialog_transaction_storage_failure">An issue was encountered while attempting to store the transaction on the server.</string>
    <string name="alert_dialog_transaction_storage_success">The transaction was stored successfully!</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="validation_product_lookup_code">Product lookup code may not be empty.</string>
    <string name="validation_employee_id">Employee ID may not be empty.</string>
    <string name="validation_employee_password">Employee password may not be empty.</string>
    <string name="validation_employee_first_name">Employee first name may not be empty.</string>
    <string name="validation_employee_last_name">Employee last name may not be empty.</string>
    <string name="validation_product_count">Product count must be a number and may not be negative.</string>
    <string name="intent_extra_product">intent_extra_product</string>
    <string name="intent_extra_employee">intent_extra_employee</string>
    <string name="intent_extra_transaction">intent_extra_transaction</string>
    <string name="title_activity_home_screen">Home Screen</string>
    <string name="title_activity_employee_login">Employee Login</string>
    <string name="edit_text_employee_id">Employee ID</string>
    <string name="edit_text_employee_password">Employee Password</string>
    <string name="cancel_transaction_button">Cancel</string>
    <string name="checkout_button">Checkout</string>
    <string name="add_items_button">Add Items</string>
    <string name="change_items_button">Find Items</string>
    <string name="find_items_button">Find Items</string>
    <string name="change_quantity_button">Add/Remove Product</string>
    <string name="intent_extra_transaction_transition_FindProductsActivity">intent_extra_transaction_transition_FindProductsActivity</string>
    <string name="intent_extra_transaction_transition_ShoppingCartActivity">intent_extra_transaction_transition_ShoppingCartActivity</string>
    <string name="intent_extra_transaction_transition_from_ShoppingCartActivity">intent_extra_transaction_transition_from_ShoppingCartActivity</string>
    <string name="intent_extra_product_FindProductsActivity">intent_extra_product_FindProductsActivity</string>
</resources>
