<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_employee_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.uark.uarkregisterapp.EmployeeLoginActivity"
    tools:showIn="@layout/activity_employee_login">

    <EditText
        android:id="@+id/edit_text_employee_id"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:hint="@string/edit_text_employee_id"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_employee_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/edit_text_employee_id"
        android:layout_marginTop="30dp"
        android:hint="@string/edit_text_employee_password"
        android:inputType="text"/>


    <Button
        android:id="@+id/button_employee_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_employee_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/button_create_emplyee"
        android:onClick="employeeLoginButtonOnClick"/>

</RelativeLayout>
