<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shopping_cart"
    android:background="@drawable/nongmo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.uark.uarkregisterapp.ShoppingCartActivity"
    tools:showIn="@layout/activity_shopping_cart">
<!-- CREATED BY AUSTIN BROWN -->
   <!-- CANCEL TRANSACTION BUTTON gives error on line 29 of HomeScreenActivity.java because data is not persisted.-->
   <Button
        android:id="@+id/button_cancel_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:onClick="cancelTransactionButtonOnClick"
        android:text="@string/cancel_transaction_button"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/button_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:onClick="checkoutButtonOnClick"
        android:text="@string/checkout_button"
        android:textAlignment="center"/>

    <Button
        style="@style/Widget.AppCompat.Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="0dp"
        android:text="@string/find_items_button"
        android:onClick="findItemsButtonOnClick"
        android:textAlignment="center"/>

    <include
        layout="@layout/content_products_listing"
        android:layout_width="wrap_content"
        android:layout_height="427dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="50dp"/>
</RelativeLayout>